--- a/mysite/static/main.css
+++ b/mysite/static/main.css
@@ -157,6 +157,12 @@ body {
 }
 
 /* FORM STYLE */
+#word-count {
+    font-size: 10px;
+    display: block;
+    text-align: right;
+}
+
 .form-control {
     border: 1px solid #f2f2f2;
     border-radius: 5px;
@@ -178,6 +184,7 @@ body {
     border-radius: 4px;
     color: #fff;
     cursor: pointer;
+    margin: 10px 0;
     padding: 6px 14px;
     transition: background-color ease-in-out .15s;
     width: 100%;
@@ -185,6 +192,11 @@ body {
 
 .btn:hover {
     background-color: #008bcc;
+}
+
+.selectize-control.multi .selectize-input [data-value] {
+    background-color: #008bcc;
+    background-image: none;
 }
 
 /* PAGINATION */
