--- a/project_template/templates/project_template/index.html
+++ b/project_template/templates/project_template/index.html
@@ -20,8 +20,12 @@
                         <div id="wiki-img"></div>
                         <div class="wiki-content-text">
                             <p id="wiki-text"></p>
-                            <p id="wiki-authors"></p>
-                            <p id="wiki-topics"></p>
+                            <button id="wiki-showmore-btn" class="btn btn-info" onclick="authorInfo('{{input}}')">Show Recommendation</button>
+                            <div id="wiki-showmore">
+                                <img id="loading-small" alt="http://loading.io/loader/?use=eyJzaXplIjo2MCwic3BlZWQiOjEsImNiayI6IiNmZmZmZmYiLCJjMSI6IiM1NTU1NTUiLCJjMiI6IjEyIiwiYzMiOiI3IiwiYzQiOiIyMCIsImM1IjoiNSIsImM2IjoiMzAiLCJ0eXBlIjoiZGVmYXVsdCJ9" src="/static/loading.gif">
+                                <p id="wiki-authors"></p>
+                                <p id="wiki-topics"></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -178,7 +182,7 @@
                     {% if output %}
                         {% for quote, author, id in output %}
                             <div class="quote">
-                                <div class="quote-content" data-track="{{id}}" onclick="authorInfo('{{input}}')">
+                                <div class="quote-content" data-track="{{id}}">
                                     <p>{{quote}}</p>
                                     <p class="author">by {{author}}</p>
                                 </div>
