removed rocchio for now

--- a/project_template/templates/project_template/index.html
+++ b/project_template/templates/project_template/index.html
@@ -164,11 +164,11 @@
                     </form>
 
                     {% if output %}
-                        <p class="title text-button" onclick="showHiddenContent()">I want to improve my results!</p>
+                        <!-- <p class="title text-button" onclick="showHiddenContent()">I want to improve my results!</p>
                         <div class="hidden hidden-content">
                             <p>Select the top quotes from the first 15 results, and we'll improve your query's results!</p>
                             <button type="submit" class="btn btn-info">RECALCULATE</button>
-                        </div>
+                        </div> -->
                     {% endif %}
                 </div>
 
